[package]
name = "sesters"
description = "Fast currency conversion tool with local cache"
documentation = "https://github.com/leowzukw/sesters/wiki"
repository = "https://github.com/leowzukw/sesters"
readme = "Readme.md"
keywords = ["currency_converter", "cli"]
categories = ["command-line-utilities"]
version = "0.1.0"
authors = ["Leo <oss+sesters@131719.xyz>"]
edition = "2018"
license = "GPL-3.0-or-later"
license-file = "LICENSE"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "...", branch = "master" }

[dependencies]
reqwest = "0.9"
regex = "1"
lazy_static = "1.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
env_logger = "0.6.*"
log = "0.4.*"
confy = "0.3.*"
kv = { version = "0.8.*", features = ["bincode-value"] }
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.*"
